--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="menu_delete">Delete</string>
 
     <string name="nombre_persona">Alex</string>
+
+    <string name="menu_view">View Image</string>
+    <string name="menu_view_detail">View Image Detail</string>
 </resources>
